[package]
name = "pict-rs"
description = "A simple image hosting service"
version = "0.1.4"
authors = ["asonix <asonix@asonix.dog>"]
license = "AGPL-3.0"
readme = "README.md"
repository = "https://git.asonix.dog/asonix/pict-rs"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-form-data = { git = "https://git.asonix.dog/Aardwolf/actix-form-data" }
actix-fs = { git = "https://git.asonix.dog/asonix/actix-fs" }
actix-rt = "1.1.1"
actix-web = { version = "3.0.0-alpha.2", features = ["rustls"] }
anyhow = "1.0"
bytes = "0.5"
env_logger = "0.7"
futures = "0.3.4"
gif = "0.10.3"
image = "0.23.4"
log = "0.4"
mime = "0.3.1"
rand = "0.7.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.9.0"
sled = "0.32.0-rc1"
structopt = "0.3.14"
thiserror = "1.0"
